linked botter footer images and fixed horizontal scrolling issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-/*
-  ========================================
-  Grid
-  ========================================
-*/
-
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -11,20 +5,24 @@
 }
 
 body {
+  margin: 0 auto;
+  padding: 0;
+  width: 1440px;
+}
+
+main {
   background: url(../images/your_verse_hero.jpg) center -48.55em no-repeat;
   background-size: 1440px 1315px;
   font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
   margin: 0 auto;
-  max-width: 100%;
+  overflow: hidden;
   position: relative;
-  width: 1440px;
+  max-width: 100%;
 }
 
 .header {
   width: 960px;
   margin: 0 auto;
-  position: relative;
-  z-index: 9999;
   text-align: center;
 }
 
@@ -34,7 +32,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.3) 0 1px 2px;
   font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
   position: absolute;
-  bottom: 52px;
+  top: 52px;
   font-size: small;
 }
 
@@ -108,10 +106,10 @@ ul {
 
 .hero-text {
   color: #fff;
-  text-align: center;
-  margin: 170px auto;
-  width: 50%;
+  margin: 170px auto 140px auto;
   max-width: 100%;
+  width: 50%;
+  text-align: center;
   text-decoration: none;
 }
 
@@ -123,29 +121,15 @@ ul {
 }
 
 .hero-text h2 {
-  background: url(../images/everyone_has_something_to_share.png) -100px no-repeat;
-  background-size: contain;
+  background: url(../images/everyone_has_something_to_share.png) center top no-repeat;
+  background-size: 56.9rem;
   height: 82px;
   text-indent: -9999px;
-  width: 980px;
 }
 
-.bottom-footer {
-  clear: both;
-  content: "";
-  display: table;
-}
-
-.bottom-footer figure {
-  margin: -32px 0;
-  float: left;
-  width: 24.79%;
-}
-
-.iphone5s,
-.iphone5c,
-.promo-30-years {
-  margin-right: 2px !important;
+.bottom-footer li {
+  display: inline-block;
+  width: 356px;
   overflow: hidden;
 }
 
@@ -158,7 +142,7 @@ ul {
 .footer-nav {
   clear: both;
   overflow: hidden;
-  margin-top: 45px;
+  margin-top: 10px;
   margin-bottom: 30px;
 }
 
